--- a/src/Display.form
+++ b/src/Display.form
@@ -59,7 +59,7 @@
           </component>
           <component id="bba7e" class="javax.swing.JButton" binding="button2" default-binding="true">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="true"/>
@@ -160,6 +160,14 @@
             </constraints>
             <properties>
               <orientation value="1"/>
+            </properties>
+          </component>
+          <component id="2e9cd" class="javax.swing.JButton" binding="wsteczButton" default-binding="true">
+            <constraints>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Wstecz"/>
             </properties>
           </component>
         </children>
