--- a/src/Display.form
+++ b/src/Display.form
@@ -232,7 +232,7 @@
           </component>
         </children>
       </grid>
-      <grid id="255cb" binding="panel3" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="255cb" binding="panel3" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="3" left="3" bottom="3" right="3"/>
         <constraints>
           <card name="Card3"/>
@@ -275,7 +275,7 @@
           </component>
           <component id="189a" class="javax.swing.JButton" binding="button1" default-binding="true">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Dalej"/>
@@ -324,7 +324,7 @@
           </component>
           <component id="70e08" class="javax.swing.JLabel">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Ilość przypisanej pamięci RAM:"/>
@@ -332,7 +332,7 @@
           </component>
           <component id="8f994" class="javax.swing.JSlider" binding="slider1" default-binding="true">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-16777216"/>
@@ -344,6 +344,40 @@
               <paintTicks value="true"/>
               <snapToTicks value="true"/>
               <value value="2"/>
+            </properties>
+            <clientProperties>
+              <JSlider.isFilled class="java.lang.Boolean" value="false"/>
+              <Slider.paintThumbArrowShape class="java.lang.Boolean" value="true"/>
+            </clientProperties>
+          </component>
+          <component id="8a6ce" class="javax.swing.JCheckBox" binding="checkOptifine">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Zainstaluj Optifine HD Ultra"/>
+            </properties>
+          </component>
+          <component id="5d91f" class="javax.swing.JSeparator">
+            <constraints>
+              <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="154a6" class="javax.swing.JCheckBox" binding="zainstalujMoCreaturesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Zainstaluj Mo' Creatures"/>
+            </properties>
+          </component>
+          <component id="cb11" class="javax.swing.JLabel" binding="optionalText">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Modyfikacje opcjonalne zgodne z wybraną wersją modpacka:"/>
             </properties>
           </component>
         </children>
